--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/setup-dotnet@v1.8.2
 
       - name: Publish Email Service Lambda Source Code 
-        run: |
+      - run: |
           dotnet publish -p "./source/EmailFailOverLambda/EmailFailOverLambda" -o ./publish
           zip -r EmailServiceLambda.zip ./publish
 
