--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Publish Email Service Lambda Source Code 
         run: |
-          dotnet publish -p "./source/EmailFailOverLambda/EmailFailOverLambda" -o ./publish
+          dotnet publish "./source/EmailFailOverLambda/EmailFailOverLambda" -o ./publish
           zip -r EmailServiceLambda.zip ./publish
 
       - name: Upload Lambda Artifact to GitHub Repository      
