--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
     
     steps:
       - name: Download Email Service Lambda Artifact
+        uses: actions/download-artifact@v2.0.10
         with:
           name: EmailServiceLambda-1.0.0.zip
           path: ./infrastructure/deploy/lambda
