--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Build and Upload Lambda Runtime Package
+name: Build and Deploy Email Service Lambda
 
 on:
 #   push:
@@ -34,3 +32,31 @@ jobs:
         with:
           name: EmailServiceLambda-1.0.0.zip
           path: ./EmailServiceLambda.zip    
+          
+  deploy_email_service_lambda:
+      runs-on: ubuntu-latest
+      needs: build_and_deploy_artifact
+
+      steps:
+        - name: Download Email Service Lambda Artifact
+          uses: actions/download-artifact@v2.0.10
+          with:
+            name: EmailServiceLambda-1.0.0.zip
+            path: ./infrastructure/deploy/lambda
+
+        - name: Configure AWS Credentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
+            aws-region: us-west-2
+
+        - name: Configure Terraform CLI
+          uses: hashicorp/setup-terraform@v1.2.1
+          with:
+            terraform_version: 0.14.6
+
+        - name: Deploy Terraform Infrastructure
+          run: |
+            cd ./infrastructure/deploy
+            sh deploy.sh lambda
