--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           uses: actions/download-artifact@v2.0.10
           with:
             name: EmailServiceLambda-1.0.0.zip
-            path: ./infrastructure/deploy/lambda
+            path: ./infrastructure/deploy/lambda/EmailServiceLambda.zip
 
         - name: Configure AWS Credentials
           uses: aws-actions/configure-aws-credentials@v1
@@ -59,5 +59,6 @@ jobs:
         - name: Deploy Terraform Infrastructure
           run: |
             cd ./infrastructure/deploy
-            chmod +x deploy.sh
+            ls
+            chmod +x ./deploy.sh
             sh deploy.sh lambda
