--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,6 @@ jobs:
         - name: Deploy Terraform Infrastructure
           run: |
             cd ./infrastructure/deploy
-            ls
-            chmod +x ./deploy.sh
+            ls -p | grep -v /
+            chmod +x deploy.sh
             //sh deploy.sh lambda
