--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,5 +59,5 @@ jobs:
         - name: Deploy Terraform Infrastructure
           working-directory: ./infrastructure/deploy
           run: |
-            chmod +x deploy.sh
+            chmod +x ./deploy.sh
             sh deploy.sh lambda
