--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,5 +59,6 @@ jobs:
         - name: Deploy Terraform Infrastructure
           working-directory: ./infrastructure/deploy
           run: |
+            echo $PWD
             sudo chmod +x deploy.sh
             sh deploy.sh lambda
