--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,9 @@ jobs:
       needs: build_and_deploy_artifact
 
       steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+          
         - name: Download Email Service Lambda Artifact
           uses: actions/download-artifact@v2.0.10
           with:
@@ -60,6 +63,5 @@ jobs:
         - name: Deploy Terraform Infrastructure
           working-directory: ./infrastructure/deploy
           run: |
-            echo $PWD
-            chmod +x "${GITHUB_WORKSPACE}/infrastructure/deploy/deploy.sh"
+            chmod +x deploy.sh
             sh deploy.sh lambda
