--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Publish Email Service Lambda Source Code 
         run: |
           dotnet publish "./source/EmailFailOverLambda/EmailFailOverLambda" -o ./publish
-          zip -r EmailServiceLambda-1.0.0.zip ./publish/*
+          cd publish
+          zip -r EmailServiceLambda-1.0.0.zip
 
       - name: Upload Lambda Artifact to GitHub Repository      
         uses: actions/upload-artifact@v2
