API definition transferred by SwaggerHub

--- a/infrastructure/deploy/api_gateway/swagger.yaml
+++ b/infrastructure/deploy/api_gateway/swagger.yaml
@@ -68,8 +68,12 @@
     "schemas" : {
       "EmailApiResponse" : {
         "type" : "object",
+        "required" : [ "RequestId", "MessageId" ],
         "properties" : {
-          "Id" : {
+          "RequestId" : {
+            "type" : "string"
+          },
+          "MessageId" : {
             "type" : "string"
           }
         }
