--- a/source/EmailFailOverLambda/EmailFailOverLambda/EmailFailOverLambda.csproj
+++ b/source/EmailFailOverLambda/EmailFailOverLambda/EmailFailOverLambda.csproj
@@ -9,7 +9,8 @@
     <PackageReference Include="Amazon.Lambda.Core" Version="1.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.7.0" />
     <PackageReference Include="Amazon.Lambda.SQSEvents" Version="1.1.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="RestSharp" Version="106.12.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Ap.IntermediateEmailClient\Ap.IntermediateEmailService.csproj" />
   </ItemGroup>
 </Project>
